2002-02-10  Richard Henderson  <rth@redhat.com>

	* doc/c-alpha.texi: New file.
	* doc/Makefile.am (CPU_DOCS): Add it.
	* doc/all.texi, doc/as.texinfo: Add hooks for Alpha.

2002-02-09  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (O_samegp): New.
	(USER_RELOC_P): Include it.
	(alpha_reloc_op_tag, debug_exp, find_macro_match): Add it.
	(md_apply_fix3): Handle BFD_RELOC_ALPHA_BRSGP.
	(alpha_force_relocation, alpha_fix_adjustable): Likewise.
	(alpha_validate_fix): New.
	* config/tc-alpha.h (TC_VALIDATE_FIX): New.

2002-02-09  Hans-Peter Nilsson  <hp@axis.com>

	* doc/c-cris.texi: New.
	* doc/all.texi: @set CRIS.
	* doc/as.texinfo: Ditto.  Add CRIS gas manpage option overview.
	Include c-cris.texi.
	* doc/Makefile.am (CPU_DOCS): Add c-cris.texi
	* doc/Makefile.in: Regenerate.

2002-02-08  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (IS_SEXT_32BIT_NUM): New macro to
	determine if a number is a sign-extended 32-bit number.
	(load_register): Use IS_SEXT_32BIT_NUM.
	(macro): Check if load/store macro handling is using a
	constant 32-bit address on 64-bit address systems, and if
	so optimize the generation of that address.

2002-02-08  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (alpha_force_relocation): Don't assert that
	we've eliminated all foreign relocation types yet.
	(alpha_fix_adjustable): Likewise.

2002-02-08  Alexandre Oliva  <aoliva@redhat.com>

	Contribute sh64-elf.
	2002-02-08  Alexandre Oliva  <aoliva@redhat.com>
		    Stephen Clarke <Stephen.Clarke@st.com>
	* doc/c-sh64.texi: Fix citation of SH64 architecture manual.
	2002-01-31  Alexandre Oliva  <aoliva@redhat.com>
	* config/tc-sh.c (md_relax_table): Added default sizes for
	non-PC-relative UNDEF_MOVI, and relaxation sequences for
	MOVI_16, MOVI_32 and MOVI_48.
	* config/tc-sh64.c (shmedia_md_apply_fix3): Fix warning.
	(shmedia_md_convert_frag): Handle non-PC-relative UNDEF_MOVI
	and MOVI_16.
	(shmedia_md_estimate_size_before_relax): Remove redundant